Fri Jun 11 12:07:27 2004  Emre Turkay  <turkaye@dre.vanderbilt.edu>

	* DnC/Config_Handlers/Process_Element.cpp:
	* DnC/Config_Handlers/Process_Element.i:
	* DnC/Config_Handlers/Process_Element.tpp:
	* DnC/Config_Handlers/Utils.cpp:
	* DnC/Config_Handlers/Utils.h:
	* DnC/Config_Handlers/RepositoryManager_Impl.cpp:
	* DnC/RepositoryManager/Repository_Manager.cpp: 

	Deleted the duplicate definition of create_doc & create_doc is
        replaced with create_parser.

Fri Jun 11 00:10:42 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/Config_Handlers/Process_Element.cpp:
        * DnC/Config_Handlers/Utils.cpp:
        * DnC/Config_Handlers/Utils.h:
        * DnC/RepositoryManager/RepositoryManager_Impl.cpp:
        * DnC/RepositoryManager/Repository_Manager.cpp:

          Fixed segmentation faults, traced during integration
          teting.

Thu Jun 10 18:24:58 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/Config_Handlers/Process_Element.tpp:

          More memory leaks fixed.

Thu Jun 10 18:12:44 2004  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * DnC/Config_Handlers/Process_Element.cpp:
        * DnC/Config_Handlers/Property_Handler.cpp:
        * DnC/Config_Handlers/RS_Handler.cpp:
        * DnC/Config_Handlers/SP_Handler.cpp:

          Finally, Config_Handler directory compiles correctly

Thu Jun 10 18:06:52 2004  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * DnC/Config_Handlers/CAD_Handler.cpp:
        * DnC/Config_Handlers/CPK_Handler.cpp:
	* DnC/Config_Handlers/CompImplDesc_Handler.cpp:
        * DnC/Config_Handlers/Utils.cpp:

          Fixed compilation errors from improper use of XMLString::release.

Thu Jun 10 18:05:09 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/Config_Handlers/Process_Element.cpp:
        * DnC/Config_Handlers/Property_Handler.cpp:
        * DnC/Config_Handlers/RS_Handler.cpp:
        * DnC/Config_Handlers/SP_Handler.cpp:

          More memory leaks fixed.
